<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.aksw.faraday_cage</groupId>
  <artifactId>faraday-cage</artifactId>
  <version>1.1.1-SNAPSHOT</version>

  <name>FARADAY-CAGE</name>
  <description>Framework for acyclic directed graphs yielding parallel computations of great efficiency</description>

  <url>https://github.com/dice-group/faraday-cage</url>

  <scm>
    <url>https://github.com/dice-group/faraday-cage</url>
    <connection>scm:git:https://github.com/dice-group/faraday-cage.git</connection>
    <tag>HEAD</tag>
  </scm>

  <properties>
    <maven.compiler.release>11</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jena.version>3.9.0</jena.version>
    <slf4j.version>1.7.25</slf4j.version>
  </properties>

  <packaging>jar</packaging>

  <distributionManagement>
    <repository>
      <id>maven.aksw.internal</id>
      <url>https://maven.aksw.org/archiva/repository/internal</url>
    </repository>
    <snapshotRepository>
      <id>maven.aksw.snapshots</id>
      <name>AKSW Snapshot Repository</name>
      <url>https://maven.aksw.org/archiva/repository/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <repositories>

    <repository>
      <id>maven.aksw.internal</id>
      <name>University Leipzig, AKSW Maven2 Internal Repository</name>
      <url>https://maven.aksw.org/repository/internal/</url>
    </repository>

    <repository>
      <id>maven.aksw.snapshots</id>
      <name>University Leipzig, AKSW Maven2 Snapshot Repository</name>
      <url>https://maven.aksw.org/repository/snapshots/</url>
    </repository>

    <repository>
      <id>maven2-repository.java.net</id>
      <name>Java.net Repository for Maven</name>
      <url>http://download.java.net/maven/2/</url>
      <layout>default</layout>
    </repository>

    <repository>
      <id>sonatype-nexus-snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>

    <repository>
      <id>jcenter</id>
      <url>http://jcenter.bintray.com</url>
    </repository>

    <repository>
      <id>mulesoft</id>
      <url>http://repository.mulesoft.org/releases/</url>
    </repository>

    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>

  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>${maven.compiler.release}</release>
          <encoding>${project.build.sourceEncoding}</encoding>
          <annotationProcessorPaths>
            <annotationProcessorPath>
              <groupId>org.pf4j</groupId>
              <artifactId>pf4j</artifactId>
              <version>3.0.1</version>
            </annotationProcessorPath>
          </annotationProcessorPaths>
          <annotationProcessors>
            <annotationProcessor>org.pf4j.processor.ExtensionAnnotationProcessor</annotationProcessor>
          </annotationProcessors>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>7.0</version>
          </dependency>
        </dependencies>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <links>
            <link>https://jena.apache.org/documentation/javadoc/jena/</link>
          </links>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

<!--      <plugin>-->
<!--        <groupId>org.jacoco</groupId>-->
<!--        <artifactId>jacoco-maven-plugin</artifactId>-->
<!--        <version>0.8.2</version>-->
<!--        <executions>-->
<!--          &lt;!&ndash;-->
<!--              Prepares the property pointing to the JaCoCo runtime agent which-->
<!--              is passed as VM argument when Maven the Surefire plugin is executed.-->
<!--          &ndash;&gt;-->
<!--          <execution>-->
<!--            <id>pre-unit-test</id>-->
<!--            <goals>-->
<!--              <goal>prepare-agent</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              &lt;!&ndash; Sets the path to the file which contains the execution data. &ndash;&gt;-->
<!--              <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>-->
<!--              &lt;!&ndash;-->
<!--                  Sets the name of the property containing the settings-->
<!--                  for JaCoCo runtime agent.-->
<!--              &ndash;&gt;-->
<!--              <propertyName>surefireArgLine</propertyName>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--          &lt;!&ndash;-->
<!--              Ensures that the code coverage report for unit tests is created after-->
<!--              unit tests have been run.-->
<!--          &ndash;&gt;-->
<!--          <execution>-->
<!--            <id>post-unit-test</id>-->
<!--            <phase>test</phase>-->
<!--            <goals>-->
<!--              <goal>report</goal>-->
<!--            </goals>-->
<!--            <configuration>-->
<!--              &lt;!&ndash; Sets the path to the file which contains the execution data. &ndash;&gt;-->
<!--              <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>-->
<!--              &lt;!&ndash; Sets the output directory for the code coverage report. &ndash;&gt;-->
<!--              <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>-->
<!--            </configuration>-->
<!--          </execution>-->
<!--        </executions>-->
<!--      </plugin>-->

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.22.2</version>
        <configuration>
          <forkCount>0</forkCount>
          <reuseForks>false</reuseForks>
          <argLine>--illegal-access=permit -Xms256m -Xmx512m ${surefireArgLine}</argLine>
          <testFailureIgnore>false</testFailureIgnore>
          <skipTests>false</skipTests>
          <useManifestOnlyJar>false</useManifestOnlyJar>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>2.5.3</version>
        <configuration>
          <tag>${releaseVersion}</tag>
          <tagNameFormat>@{project.version}</tagNameFormat>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <!--<releaseProfiles>releases</releaseProfiles>-->
          <arguments>-P!source-artifacts</arguments>
          <useReleaseProfile>false</useReleaseProfile>
          <goals>-Dmaven.test.skip=true deploy</goals>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-scm-plugin</artifactId>
            <version>1.9.5</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>


  <dependencies>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>2.24.5</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.jetbrains</groupId>
      <artifactId>annotations</artifactId>
      <version>17.0.0</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-nop</artifactId>
      <version>${slf4j.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-core</artifactId>
      <version>${jena.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>slf4j-api</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
        <exclusion>
          <artifactId>slf4j-log4j12</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-arq</artifactId>
      <version>${jena.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>slf4j-api</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
        <exclusion>
          <artifactId>slf4j-log4j12</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
        <exclusion>
          <artifactId>jcl-over-slf4j</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-querybuilder</artifactId>
      <version>${jena.version}</version>
    </dependency>

    <dependency>
      <groupId>org.topbraid</groupId>
      <artifactId>shacl</artifactId>
      <version>1.1.0</version>
      <exclusions>
        <exclusion>
          <groupId>org.apache.jena</groupId>
          <artifactId>jena-arq</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>24.0-jre</version>
    </dependency>

    <dependency>
      <groupId>org.pf4j</groupId>
      <artifactId>pf4j</artifactId>
      <version>3.0.1</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.9</version>
    </dependency>

  </dependencies>

</project>